--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 alembic==1.9.1
+click==8.1.3
+colorama==0.4.6
 Flask==2.2.2
-flask_login==0.6.2
-flask_migrate==4.0.0
-flask_sqlalchemy==3.0.2
-flask_wtf==1.0.1
+Flask-Login==0.6.2
+Flask-Migrate==4.0.0
+Flask-SQLAlchemy==3.0.2
+Flask-WTF==1.0.1
+greenlet==2.0.1
+importlib-metadata==6.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.4
+MarkupSafe==2.1.1
 SQLAlchemy==1.4.45
 Werkzeug==2.2.2
 WTForms==3.0.1
+zipp==3.11.0
